Corrected a positioning issue with ExpandableListItem Caret and spacing issue on ExpandablePicker.
Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/ExpandableListItem.less
+++ b/css/ExpandableListItem.less
@@ -5,7 +5,7 @@
   max-width: 100%;
 }
 .moon-expandable-list-header.moon-expandable-picker-header:after {
-  top: @moon-spotlight-outset + 3;
+  top: 3px;
 }
 
 /* Client Items */
