--- a/css/ExpandablePicker.less
+++ b/css/ExpandablePicker.less
@@ -4,6 +4,7 @@
 	display: inline-block;
 	padding-right: @moon-spotlight-outset + 30px;
 	position: relative;
+	vertical-align: top;
 
 	&:after {
 		position: absolute;
@@ -39,7 +40,7 @@
 .moon-expandable-picker-current-value {
 	.moon-body-text;
 	color: @moon-expandable-picker-text-color;
-	margin: 0px;
+	margin: 0px 0px 6px 0px;
 }
 .enyo-locale-right-to-left .moon-expandable-picker-current-value {
 	padding-left: 0;
